# langchain-learn-1

./: README.md  chains_lang.py  pyproject.toml
infoq_langchain_huangjia/: __init__.py  langchain_output.py
infoq_langchain_huangjia/agent_ext/: plan_execute_agent.py  playwright_ext.py  sel_ask_agent.py  simple_react.py  structured_agent.py
infoq_langchain_huangjia/llm_chains/: flower.py  route_prompt.py  sequencial_chain.py
langchain_learn_1/: __init__.py
langchain_learn_1/lib/: __init__.py  build_llm_base.py  lang_chat.py
openai_exp/: callfunction.py  callfunctionMuliple.py  chain_ex.py  chat.py  chatSampleFunctionExtraction.py  chatSampleFunctionTagging.py  completion.py  functionSchemas.py  prot.py
tests/: __init__.py  rebank_chain.py  test.py
